@@ -2,6 +2,7 @@ Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
           - fix incorrect prereq needed for tests
+          - support for $id and $anchor in single schema documents
 
 0.001     2020-05-21 15:51:00Z
           - Initial release.
